welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: ')' expected but 'if' found.
  if (b >= 10 && b <= 20 && (a <10 || a >20))
  ^max1020:8: error: ';' expected but 'if' found.
  if ((a >= 10) && (a <= 20) && (b >= 10) && (b <= 20))
  ^